--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "devDependencies": {
     "gulp": "~3.7.0",
     "gulp-browserify": "~0.5.0",
-    "gulp-rename": "~1.2.0"
+    "gulp-rename": "~1.2.0",
+    "gulp-footer": "~1.0.4",
+    "gulp-concat": "~2.2.0"
   }
 }
