--- a/package.json
+++ b/package.json
@@ -18,6 +18,12 @@
     "gulp-browserify": "~0.5.0",
     "gulp-rename": "~1.2.0",
     "gulp-footer": "~1.0.4",
-    "gulp-concat": "~2.2.0"
+    "gulp-concat": "~2.2.0",
+    "gulp-util": "~2.2.16",
+    "gulp-plumber": "~0.6.2",
+    "gulp-tap": "~0.1.1",
+    "browserify": "~4.1.8",
+    "watchify": "~0.10.2",
+    "vinyl-source-stream": "~0.1.1"
   }
 }
